Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18092

Query with the table I_S.PARAMETERS stop working after a package is created.

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.3.11, 10.3.13
    • 10.3.15, 10.4.5
    • OTHER
    • None

    Description

      Preconditions: MariaDB 10.3.11 is installed from box.
      Only information_schema, mysql and performance_schema are available after installation. No user databases are present.
      All actions are performed with the user root.
      Steps to reproduce:
      1. Run the command line and execute the command:
      "C:\Program Files\MariaDB 10.3\bin\mysql.exe" -u root -proot
      2. Execute the script (see attachment) with the command: source D:/Script.sql
      After the script is executed, the db1 database will be created with two tables and one package.
      3. Execute the query: SELECT * FROM information_schema.parameters;

      Actual Result: ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near 'BEGIN END' at line 1

      P.S Execution of the command drop database db1; makes the specified query to execute successfully.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              AlenaS Alena Subotina
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.